--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a class="scroll" href="../index.html">Home</a></li>
+            <li class="active"><a class="scroll" href="index.html">Home</a></li>
 
             <li><a class="scroll" href="#about">About Us</a>
               <!-- <ul class="nav-dropdown">
@@ -229,7 +229,7 @@
 
 
           <div style="padding-left:7%" class="col-md-4 ab-sec-img wow fadeInUp" data-wow-duration="1000ms"
-            data-wow-delay="300ms"><iframe width="360" height="250" src="https://www.youtube.com/embed/2ZQrHi5Tn0w"
+            data-wow-delay="300ms"><iframe width="360" height="250" src="https://www.youtube.com/embed/1hV7NBT0pIY"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
@@ -312,7 +312,7 @@
                   <textarea name="message" id="message" class="form-control" rows="4" placeholder="Enter your message"
                     required="required"></textarea>
                 </div>
-                <a class="btn-send col-md-12 col-sm-12 col-xs-12" href="#">Send</a>
+                <a class="btn-send col-md-12 col-sm-12 col-xs-12" href="https://forms.gle/z4wAvBmJQkfaJNwYA">Send</a>
               </form>
             </div>
 
@@ -555,7 +555,7 @@
 
           <div class="col-md-4 blog-sec">
             <div class="blog-info" style="border:1px solid #d5d81d; height:100%">
-              <div style="height: 280px; "><img src="images/Blog/1.jpg" class="img-responsive" alt=""></div>
+              <div style="height: 280px; "><img src="" class="img-responsive" alt=""></div>
               <div class="data-meta">
                 <h4>Dec</h4>
                 <strong>28</strong><br>
@@ -597,14 +597,14 @@
                 Chhattisgarh 497778</h6>
             </li>
             <li><i class="fa fa-envelope"></i>
-              <h6 style="font-size:15px"><strong>Mail Us:<br></strong> <a href="#"> gtienquiries@gail.co.in</a></h6>
+              <h6 style="font-size:15px"><strong>Mail Us:<br></strong> <a href="#"> </a></h6>
             </li>
             <li><i class="fa fa-phone"></i>
               <h6 style="font-size:15px"><strong>Phone:<br></strong>Dr Rajiv Kumar Raman – 9575249562<br>Dr Abhya Gupta
                 – 9993788217</h6>
             </li>
             <li><i class="fa fa-wechat"></i>
-              <h6 style="font-size:15px"><strong>Website:<br></strong> <a href="http://gailgti.in/">www.gailgti.in</a>
+              <h6 style="font-size:15px"><strong>Website:<br></strong> <a href=""></a>
               </h6>
             </li>
           </ul>
