--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </li>
             <li><a class="scroll" href="#portfolio">Staff</a>
               <ul class="nav-dropdown">
-                <li><a href="infrastucture\classrooms-and-halls.html">Special Facilities</a></li>
+                <li><a href="Programs/staff-facility.html">Special Facilities</a></li>
 
               </ul>
             </li>
@@ -339,7 +339,7 @@
         <div class="col-md-12 ab-sec" style="display:flex;">
 
           <div class="col-md-6" style="width: 32%;">
-            <a class="card" href="Programs\Functional-Technical.php">
+            <a class="card" >
               <div class="card__background" style="background-image: url(course-one.jpg)"></div>
               <div class="card__content">
                 <p class="card__category">Service</p>
@@ -349,7 +349,7 @@
           </div>
 
           <div class="col-md-6" style="width: 32%;">
-            <a class="card" href="Programs\managerial.php">
+            <a class="card" >
               <div class="card__background" style="background-image: url(course-two.jpg) "></div>
               <div class="card__content">
                 <p class="card__category">Service</p>
@@ -359,7 +359,7 @@
           </div>
 
           <div class="col-md-6" style="width: 32%;">
-            <a class="card" href="Programs\behaviour.php">
+            <a class="card" >
               <div class="card__background" style="background-image: url(course-three.jpg)"></div>
               <div class="card__content">
                 <p class="card__category">Service</p>
@@ -369,7 +369,7 @@
           </div>
 
           <div class="col-md-6" style="width: 32%;">
-            <a class="card" href="Programs\Open_programs.html">
+            <a class="card" >
               <div class="card__background" style="background-image: url(course-five.jpg)"></div>
               <div class="card__content">
                 <p class="card__category">Service</p>
@@ -379,7 +379,7 @@
           </div>
 
           <div class="col-md-6" style="width: 32%;">
-            <a class="card" href="Programs\Non-executive.php">
+            <a class="card" >
               <div class="card__background" style="background-image: url(course-four.jpg)"></div>
               <div class="card__content">
                 <p class="card__category">Program</p>
