--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
             <h3 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms"><span>W</span>elcome to the
               government healthcare centre of Janakpur</h3>
             <p><span><strong> Community Health Centre, Janakpur </strong></span>is a 100 bedded Super Specialty
-              Hospital. A dream that the people of Bhopal and Central India get the best healthcare at affordable
-              prices. A dream that the best infrastructure and technology be provided to doctors so that they can serve
+              Hospital. 100 bed building with 30 bed setup, 24x7 emergency facilities FRU setup c-section, gynaecological operation with blood storage and lab facilities, radiological facilities, quick trace and referral facilities NRC services.
+              the best infrastructure and technology be provided to doctors so that they can serve
               patients to best of their capability. A dream that our people need not flee to metros for medical needs.
               This conviction inspired us to make a world class hospital in the heart of the country where the best
               infrastructure meets the best doctors to deliver cutting edge technology with care.
